Fixed an issue with it not compiling.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/poi/trunk@371390 13f79535-47bb-0310-9956-ffa450edef68